@@ -3,8 +3,8 @@
     <string id="30100">Generelt</string>
     <string id="30101">Kvalitet</string>
 
-    <string id="30110">Bedste (op til 1.7 mbit/s)</string>
-    <string id="30111">Høj (1.0 mbit/s)</string>
+    <string id="30110">Bedste (op til 2 mbit/s)</string>
+    <string id="30111">Høj (1 mbit/s)</string>
     <string id="30112">Medium (500 kbit/s)</string>
     <string id="30113">Lav (250 kbit/s)</string>
 
